# audio2tab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: health.py  outputs.py  transcribe.py
app/core/: config.py
app/models/: fretboard.py  notes.py  transcribe.py
app/services/: audio_preprocess.py  audio_upload.py  fretboard.py  harmonic_correction.py  midi_parser.py  note_cleaner.py  note_mapping.py  tab_generator.py  transcription.py  transcription_profile.py
app/utils/: audio.py  pitch.py
frontend/: index.html
frontend/static/css/: app.css
frontend/static/js/: app.js  player.js  tab_view.js
profiles/: basic.env.example
tests/: test_audio_preprocess.py  test_audio_utils.py  test_booth_riff.py  test_config.py  test_fretboard.py  test_frontend.py  test_harmonic_correction.py  test_health.py  test_health_config.py  test_midi_parser.py  test_note_cleaner.py  test_tab_generator.py  test_transcribe.py  test_transcription.py  test_transcription_profile.py  test_whatsapp_riff.py
tests/fixtures/: booth_full_raw_notes.json  booth_riff_raw_notes.json  whatsapp_riff_raw_notes.json
