[project]
name = "audio2tab"
version = "0.1.0"
description = "Convert MP3 audio into guitar tablature using AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "basic-pitch>=0.4.0",
    "onnxruntime>=1.16.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "setuptools>=69.0.0,<82",
]

[tool.uv]
override-dependencies = [
    "tensorflow; sys_platform == 'never'",
    "tensorflow-macos; sys_platform == 'never'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
ml = [
    "demucs>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
